dist/1.0/bin/sample/retrieveUnpackaged/objects/Account_Address__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account for which this Address is related to.</description>
        <inlineHelpText>Account for which this Address is related to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Addresses</relationshipLabel>
        <relationshipName>R00N20000001SDfDEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <description>Type of Address.</description>
        <inlineHelpText>Type of Address.</inlineHelpText>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Correspondence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Related Address.</description>
        <inlineHelpText>Related Address.</inlineHelpText>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Account/Contact Addresses</relationshipLabel>
        <relationshipName>R00N20000001SDfCEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutoCreate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if this relation has been auto created.</description>
        <inlineHelpText>Specifies if this relation has been auto created.</inlineHelpText>
        <label>AutoCreate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Name of the City.</description>
        <formula>Address__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the City.</inlineHelpText>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Related Contact.</description>
        <inlineHelpText>Related Contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Addresses</relationshipLabel>
        <relationshipName>R00N20000001SDfHEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Name of the Country.</description>
        <formula>CASE(Address__r.Country__c, 
&quot;Armenia&quot;, &quot;Armenia&quot;,
&quot;Austria&quot;, &quot;Austria&quot;,
&quot;Azerbaijan&quot;, &quot;Azerbaijan&quot;,
&quot;Belorus&quot;, &quot;Belorus&quot;,
&quot;Bulgaria&quot;, &quot;Bulgaria&quot;,
&quot;Croatia&quot;, &quot;Croatia&quot;,
&quot;Czech Republic&quot;, &quot;Czech Republic&quot;,
&quot;Estonia&quot;, &quot;Estonia&quot;,
&quot;France&quot;, &quot;France&quot;,
&quot;Georgia&quot;, &quot;Georgia&quot;,
&quot;Germany&quot;, &quot;Germany&quot;,
&quot;Greece&quot;, &quot;Greece&quot;,
&quot;Hungary&quot;, &quot;Hungary&quot;,
&quot;Iran&quot;, &quot;Iran&quot;,
&quot;Kazakhstan&quot;, &quot;Kazakhstan&quot;,
&quot;Kyrgyzstan&quot;, &quot;Kyrgyzstan&quot;,
&quot;Latvia&quot;, &quot;Latvia&quot;,
&quot;Lithuania&quot;, &quot;Lithuania&quot;,
&quot;Moldova&quot;, &quot;Moldova&quot;,
&quot;Poland&quot;, &quot;Poland&quot;,
&quot;Romania&quot;, &quot;Romania&quot;,
&quot;Russia&quot;, &quot;Russia&quot;,
&quot;Serbia&quot;, &quot;Serbia&quot;,
&quot;Slovakia&quot;, &quot;Slovakia&quot;,
&quot;Slovenia&quot;, &quot;Slovenia&quot;,
&quot;Tajikistan&quot;, &quot;Tajikistan&quot;,
&quot;Turkey&quot;, &quot;Turkey&quot;,
&quot;Ukraine&quot;, &quot;Ukraine&quot;,
&quot;United Kingdom&quot;, &quot;United Kingdom&quot;,
&quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Country.</inlineHelpText>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Timestamp__c</fullName>
        <description>Stores information when this record has been last modified by integration.</description>
        <inlineHelpText>Stores information when this record has been last modified by integration.</inlineHelpText>
        <label>Integration Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>On_Net__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if address in On or Off-Net</description>
        <inlineHelpText>Indicates if address in On or Off-Net</inlineHelpText>
        <label>On Net</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Postal Code of City.</description>
        <formula>Address__r.Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Postal Code of City.</inlineHelpText>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object__c</fullName>
        <description>Link to related object - Contact or Account</description>
        <formula>IF( Account__c = null ,  HYPERLINK(&quot;/&quot; +  Contact__r.Id ,  Contact__r.FirstName + &quot; &quot; + Contact__r.LastName , &quot;_top&quot;) ,  HYPERLINK(&quot;/&quot; +  Account__r.Id ,  Account__r.Name , &quot;_top&quot; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to related object - Contact or Account</inlineHelpText>
        <label>Related Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>If this record has been migrated or created from other system this filed is storing it&apos;s ID in original system.</description>
        <externalId>true</externalId>
        <inlineHelpText>If this record has been migrated or created from other system this filed is storing it&apos;s ID in original system.</inlineHelpText>
        <label>Source Record Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Street_No__c</fullName>
        <description>Street number.</description>
        <formula>Address__r.Street_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Street number.</inlineHelpText>
        <label>Street No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Name of the street.</description>
        <formula>IF( Address__r.Street_2__c = null ,  Address__r.Street_1__c ,  Address__r.Street_1__c + &quot;, &quot; + Address__r.Street_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the street.</inlineHelpText>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if this address is primary for selected type.</description>
        <inlineHelpText>Specifies if this address is primary for selected type.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Account/Contact Address</label>
    <nameField>
        <displayFormat>AA{00000000}</displayFormat>
        <label>Relation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account/Contact Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>